# python-project-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  README.md  mypy.ini  pyproject.toml
