[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
license = "MIT"

[tool.poetry.dependencies]
python = "^{python_version}"

[tool.poetry.dev-dependencies]
black = {version = "*",allows-prereleases = true}
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
